--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -1,9 +1,14 @@
 {
   "properties": [
     {
-      "name": "jwt.signerKey",
+      "name": "jwt_secret",
       "type": "java.lang.String",
-      "description": "A description for 'jwt.signerKey'"
+      "description": "A description for 'jwt_secret'"
+    },
+    {
+      "name": "project.image",
+      "type": "java.lang.String",
+      "description": "A description for 'project.image'"
     }
   ]
 }
